--- a/Crunchyroll Unblocker/manifest.json
+++ b/Crunchyroll Unblocker/manifest.json
@@ -3,7 +3,7 @@
 
 	"name": "Crunchyroll Unblocker",
 	"description": "Watch region blocked anime on Crunchyroll from outside the US!",
-	"version": "1.0",
+	"version": "1.1",
 
 	"permissions": [
 		"background",
@@ -22,7 +22,8 @@
    }],
 	
 	"browser_action": {
-		"default_icon": "crunblock128.png"
+		"default_icon": "crunblock128.png",
+		"default_popup": "popup.html"
 	},
 	
 	"icons": { 
